--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "music",
     "activities": [
-		{"name": "Music", "url": ".", "edits": ["SONG","PART"], "uses": ["SOUNDSET"]},
+		{"name": "Gauntlet", "url": ".", "edits": ["SONG"], "uses": ["SOUNDSET"]},
 		{"name": "Music Socket Message Handler", "url": "sockets.js", "socketHandler": ["SONG"]}
 	]
 }
